--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # main text of home
-name: John Doe
+name: Kumar Abir Shuvo
 bio: A Man who travels the world eating noodles
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about t....... to 
 
 # if it's an external image, update below for true
 # better with square images
-external-image: false
+external-image: true
 picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
