--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Kumar Abir Shuvo
+name: Kumar Abir Shuvo...
 bio: A Man who travels the world eating noodles
 
 # twitter summary info
@@ -7,7 +7,7 @@ description: A blog about t....... to
 
 # if it's an external image, update below for true
 # better with square images
-external-image: true
+external-image: false
 picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
@@ -55,7 +55,7 @@ email: myemail@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
+        name: Kumar Abir Shuvo
         bio: A Man who travels the world eating noodles
         external-image: false
         picture: assets/images/profile.jpg
