--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: Kumar Abir Shuvo
+name: John Doe
 bio: A Man who travels the world eating noodles
 
 # twitter summary info
-description: A blog about t....... to 
+description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
@@ -42,20 +42,20 @@ twitter: mytwitter
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-# github: mygithub
+github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-# medium: medium
+medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: myemail@gmail.com
 
 authors:
     johndoe:
-        name: Kumar Abir Shuvo
+        name: John Doe
         bio: A Man who travels the world eating noodles
         external-image: false
         picture: assets/images/profile.jpg
