--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ authors:
         name: John Doe
         bio: A Man who travels the world eating noodles
         external-image: false
-        picture: assets/images/profile.jpeg
+        picture: assets/images/profile.JPG
         twitter: johndoe
     jamesfoster:
         name: James Foster
