--- a/_config.yml
+++ b/_config.yml
@@ -34,15 +34,15 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: www.facebook.com/kmrbr807
+twitter: https://twitter.com/KumarAbirShuvo1
 # google: mygoogle
-# instagram: myinstagram
+instagram: https://www.instagram.com/kumar_abir_shuvo/
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: https://www.linkedin.com/in/kumar-abir-shuvo-489396158/
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+#github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
@@ -51,21 +51,21 @@ github: mygithub
 medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: kumar.abir27@gmail.com
 
-authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+#authors:
+    #johndoe:
+        #name: John Doe
+        #bio: A Man who travels the world eating noodles
         external-image: false
-        picture: assets/images/profile.JPG
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        #picture: assets/images/profile.JPG
+        #twitter: johndoe
+    #jamesfoster:
+        #name: James Foster
+        #bio: A Man who develops software with coffee
+        #external-image: false
+        #picture: assets/images/james.jpg
+        #twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
