--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
 name: Kumar Abir Shuvo
-bio: A man who knows infinity
+bio: Electrical and Electronic Engineer
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about Kumar Abir Shuvo
 
 # if it's an external image, update below for true
 # better with square images
