--- a/_config.yml
+++ b/_config.yml
@@ -53,19 +53,19 @@ medium: medium
 # lanyrd: mylanyrd
 email: kumar.abir27@gmail.com
 
-#authors:
-    #johndoe:
-        #name: John Doe
-        #bio: A Man who travels the world eating noodles
+authors:
+    johndoe:
+        name: John Doe
+        bio: A Man who travels the world eating noodles
         external-image: false
-        #picture: assets/images/profile.JPG
-        #twitter: johndoe
-    #jamesfoster:
-        #name: James Foster
-        #bio: A Man who develops software with coffee
-        #external-image: false
-        #picture: assets/images/james.jpg
-        #twitter: jamesfoster
+        picture: assets/images/profile.JPG
+        twitter: johndoe
+    jamesfoster:
+        name: James Foster
+        bio: A Man who develops software with coffee
+        external-image: false
+        picture: assets/images/james.jpg
+        twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
