--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: facebook.com/kmrbr807
-twitter: mytwitter
+facebook: kmrbr807
+twitter: KumarAbirShuvo1
 # google: mygoogle
-# instagram: myinstagram
+instagram: kumar_abir_shuvo
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
