--- a/_config.yml
+++ b/_config.yml
@@ -34,24 +34,24 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
+linkedin: in/kumar-abir-shuvo-489396158
 facebook: kmrbr807
 twitter: KumarAbirShuvo1
 # google: mygoogle
 instagram: kumar_abir_shuvo
 # pinterest: mypinterest
-# linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+#github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+#medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: kumar.abir27@gmail.com
 
 authors:
     johndoe:
