--- a/_config.yml
+++ b/_config.yml
@@ -39,19 +39,19 @@ twitter: KumarAbirShuvo1
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-#linkedin: mylinkedin
+linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
-#github: mygithub
+# github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-#medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: kumar.abir27@gmail.com
 
 authors:
     johndoe:
