--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ twitter: KumarAbirShuvo1
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: kumar-abir-shuvo-489396158
+# linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
 # github: mygithub
