--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ twitter: KumarAbirShuvo1
 # linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
-# github: mygithub
+github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-# medium: medium
+medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: kumar.abir27@gmail.com
