--- a/_config.yml
+++ b/_config.yml
@@ -37,18 +37,18 @@ disqus:
 facebook: kmrbr807
 twitter: KumarAbirShuvo1
 # google: mygoogle
-# instagram: myinstagram
+instagram: kumar_abir_shuvo
 # pinterest: mypinterest
-# linkedin: kumar-abir-shuvo-489396158
+linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+# github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: kumar.abir27@gmail.com
