--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ twitter: KumarAbirShuvo1
 # google: mygoogle
 instagram: kumar_abir_shuvo
 # pinterest: mypinterest
-linkedin: kumar-abir-shuvo-489396158
+# linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
 # github: mygithub
@@ -47,7 +47,7 @@ linkedin: kumar-abir-shuvo-489396158
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
-# reddit: username
+reddit: username
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
