--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ instagram: kumar_abir_shuvo
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
-reddit: username
+# reddit: username
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
