--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Kumar Abir Shuvo
 bio: Electrical and Electronic Engineer
 
 # twitter summary info
-#description: A blog about technology and stuff related
+description: I love to focus on strategically identifying, implementing and adapting
 
 # if it's an external image, update below for true
 # better with square images
@@ -42,7 +42,7 @@ instagram: kumar_abir_shuvo
 # linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
-# github: mygithub
+github: kumarabir
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
