--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ twitter: KumarAbirShuvo1
 # google: mygoogle
 instagram: kumar_abir_shuvo
 # pinterest: mypinterest
-# linkedin: kumar-abir-shuvo-489396158
+linkedin: kumar-abir-shuvo-489396158
 # youtube: myyoutube
 # spotify: myspotify
 github: kumarabir
@@ -77,7 +77,7 @@ width: normal
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
