--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Kumar Abir Shuvo
 bio: Electrical and Electronic Engineer
 
 # twitter summary info
-description: I love to focus on strategically identifying, implementing and adapting
+description: Love to focus on strategically identifying, implementing and adapting
 
 # if it's an external image, update below for true
 # better with square images
@@ -14,7 +14,7 @@ picture: assets/images/kumar.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://drive.google.com/file/d/13Xdmc9gX7za3irlWcdo90EXEsyVXx6Gf/view?usp=sharing
 
 # url: https://koppl.in/indigo
 # your url: http://USERNAME.github.io
